spacing and avoid widows in the title on mobile

--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -111,7 +111,7 @@ h1, h2, h3, h4, h5 {
   max-width: 440px;
 }
 
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   #main-search-page .main-item .branding .branding-heading .logo {
     height: 86px;
   }
@@ -121,6 +121,12 @@ h1, h2, h3, h4, h5 {
     border-left: 3px solid $text-color;
     margin-left: 1.75rem;
     padding: 1rem 0 1rem 1.75rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #main-search-page .main-item .branding .branding-label {
+    max-width: 270px;
   }
 }
 
@@ -170,7 +176,7 @@ h1, h2, h3, h4, h5 {
   background-color: $gray-70;
 }
 
-@media (min-width: 1024px) {
+@media screen and (min-width: 1024px) {
   #main-search-page .main-item .search-container {
     width: 100%;
   }
@@ -363,7 +369,7 @@ $footer-top-border: 2px solid $text-color;
     top: 0;
     width: 100%;
     max-width: 600px;
-    margin: 1rem auto 0 auto;
+    margin: 2rem auto 0 auto;
     border-top: 2px solid $gray-70;
     border-bottom: 2px solid $gray-70;
   }
